yaml/loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  #annotations:
  #  service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
